--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,10 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-  
+    <form method = "post" action ="/">
+      <p>Enter your word</p>
+      <input type = "text" name = "user_value">
+      <button type="submit" value="submit">Submit</button>
+    </form>
   </body>
 </html>
