--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer!</</h1>
     <form method = "post" action ="/">
-      <p>Enter your word</p>
+      <p>Enter your phrase:</p>
       <input type = "text" name = "user_value">
       <button type="submit" value="submit">Submit</button>
     </form>
