--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Pig Latinizer!</</h1>
-    <form method = "post" action ="/">
+    <form method = "post" action ="/piglatinize">
       <p>Enter your phrase:</p>
       <input type = "text" name = "user_value">
       <button type="submit" value="submit">Submit</button>
