--- a/views/user_output.erb
+++ b/views/user_output.erb
@@ -5,7 +5,7 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer!</h1>
+    <h1>Pig Latinize</h1>
     <p><%= @user_input_pigified%></p>
   </body>
 </html>
