--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -5,7 +5,11 @@
     <title>title</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <form method = "post" action ="/piglatinize">
+      <p>Enter your phrase:</p>
+      <input type = "text" name = "user_phrase">
+      <button type="submit" value="submit">Submit</button>
+    </form>
   </body>
 </html>
